kubernetes/base/logging-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logging
  template:
    metadata:
      labels:
        app: logging
    spec:
      containers:
      - name: logging
        image: fluent/fluentd
        ports:
        - containerPort: 24224
