kubernetes/base/logging-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logging
spec:
  selector:
    app: logging
  ports:
    - protocol: TCP
      port: 24224
      targetPort: 24224
